results/SpecGenBench/conversational/log-Biggest-2023_08_13_01_49_48.txt
public class Biggest {

    //@ requires a != null;
    //@ ensures \result <==> a.length == 0;
    public static /*@ pure @*/ int biggest(int[] a) {
        if (a.length == 0) return -1;

        int index = 0;
        int biggest = 0;

        //@ maintaining 0 <= index && index <= a.length;
        //@ maintaining 0 <= biggest && biggest <= index;
        //@ maintaining (\forall int i; 0 <= i && i < index; a[biggest] >= a[i]);
        //@ decreases a.length - index;
        while (a.length - index > 0) {
            if (a[index] > a[biggest]) {
                biggest = index;
            }
            index = index + 1;
        }
        return biggest;
    }
}
/home/max/Documents/JMLGPT/tmp/Biggest.java:4: error: incompatible types: int cannot be converted to boolean
    //@ ensures \result <==> a.length == 0;
                ^
1 error

public class Biggest {

    //@ requires a != null;
    //@ ensures \result == -1 <==> a.length == 0;
    public static /*@ pure @*/ int biggest(int[] a) {
        if (a.length == 0) return -1;

        int index = 0;
        int biggest = 0;

        //@ maintaining 0 <= index && index <= a.length;
        //@ maintaining 0 <= biggest && biggest < a.length;
        //@ maintaining (\forall int i; 0 <= i && i < index; a[biggest] >= a[i]);
        //@ decreases a.length - index;
        while (a.length - index > 0) {
            if (a[index] > a[biggest]) {
                biggest = index;
            }
            index = index + 1;
        }
        return biggest;
    }
}

